2005-01-10  Thomas Wood  <thos@gnome.org>

	* abstract/Makefile.am: Remove unused files
	* configure.in: Get ready for release
	* translucent/gnome-translucent.xml.in.in: Fixed Rectangles wallpaper style option

2005-01-03  Takeshi AIHANA <aihana@gnome.gr.jp>

	* configure.in: Added Japanese "ja" to ALL_LINGUAS.

2004-12-30  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* configure.in: Added Danish "da" to ALL_LINGUAS.

2004-12-15  Tommi Vainikainen  <thv@iki.fi>

	* configure.in (ALL_LINGUAS): Added "fi" (Finnish).

2004-12-15  Kostas Papadimas  <pkst@gnome.org>

	* configure.in: Added Greek "el" to ALL_LINGUAS.

2004-12-11  Žygimantas Beručka  <uid0@akl.lt>

	* configure.in: Added Lithuanian "lt" to ALL_LINGUAS.

2004-12-10  Alexander Shopov  <ash@contact.bg>

	* configure.in (ALL_LINGUAS): Added "bg" (Bulgarian)

2004-12-09  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.in: Added Portuguese (pt) to ALL_LINGUAS.

2004-12-08  Thomas Wood  <thos@gnome.org>

	* AUTHORS: Updated

2004-12-07  Thomas Wood  <thos@gnome.org>

	* branded/gnome-branded.xml.in.in:

	"Source code messages in GNOME should use American English spellings"
	(Christian Rose <menthos@gnome.org>)

2004-12-07  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.

2004-11-28  Thomas Wood  <thos@gnome.org>

	* AUTHORS: Corrected and tidied

	* Makefile.am:
	* abstract/Makefile.am:
	* tiles/Makefile.am:
	* branded/Makefile.am:
	* translucent/Makefile.am:
	
	Better maintainer-clean and other updates

	* branded/GNOME-FraserIsland.jpg:
	* branded/gnome-branded.xml.in.in:

	New background

	* tiles/gnome-tiles.xml.in.in:
	* translucent/gnome-translucent.xml.in.in:

	Use default GNOME background colour for translucent backgrounds

2004-11-24   Amanpreet Singh Alam <amanlinux@netscape.net>
	*  configure.in: pa is add to ALL_LINGUAS

2004-11-21  David Lodge <dave@cirt.net>
                                                                                